# ledbadge

./: .gitignore  README.md  TODO  deploy.sh  ledbadge.ipynb  pyproject.toml  requirements.txt  urequirements.txt
src/: badgenet.py  boot.py  btntest.py  config_default.py  firmware.py  font.py  joystick.py  ledbadge.py  ledmatrix.py  network_joystick.py  pygame_network_joystick.py  snake.py  text.py  utaskmanager.py
